# pdf_chatbot

./: .gitignore  LICENSE  README.md  app.py  chat.py  pyproject.toml
index_storage/: default__vector_store.json  docstore.json  index_store.json
src/pdf_chatbot/: app.py  cli.py  core.py
src/pdf_chatbot/static/: style.css
src/pdf_chatbot/templates/: index.html
templates/: index.html
