[project]
name = "pdf-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Kjell Wiggo Abrahamsen",email = "kw.abrahamsen@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index (>=0.12.47,<0.13.0)",
    "llama-index-llms-ollama (>=0.6.2,<0.7.0)",
    "llama-index-readers-file (>=0.4.9,<0.5.0)",
    "unstructured (>=0.18.3,<0.19.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "llama-index-embeddings-huggingface (>=0.5.5,<0.6.0)",
    "flask (>=3.1.1,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
packages = [{include = "pdf_chatbot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
